[package]
name = "Gamedev-Bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
